# PerfectPrecomputedHashtable.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
.ci/: pythonPackagesToInstallFromGit.txt
PerfectPrecomputedHashtable/: __init__.py  codegen.py  hash.py  reducers.py
pow/: ReadMe.md  blake2s.cpp  blakePow.cpp  build.ninja  reducers.cpp  strings.cpp
tests/: tests.py
