[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "PerfectPrecomputedHashtable"
readme = "ReadMe.md"
description = "A framework to create scripts to precompute a near-perfect hashtable that can be stored and used in future."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["PerfectPrecomputedHashtable"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = [
	"perfection" # @ git+https://github.com/eddieantonio/perfection.git
]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/PerfectPrecomputedHashtable.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["PerfectPrecomputedHashtable", "PerfectPrecomputedHashtable.*"]

[tool.setuptools_scm]
